# otx

./: CMakeLists.txt  LICENSE
include/c/otx/: atx.h  common.h  etx.h  otx.h
include/cpp/otx/: otx.h
include/otx/: atx.h  common.h  otx.h
src/: otx.cpp
tests/: CMakeLists.txt  main.c  main.cpp
